--- a/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection_with_customized_jobs.yaml
+++ b/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection_with_customized_jobs.yaml
@@ -17,8 +17,8 @@ kaniko-build:
   - mkdir -p image
   - >-
     executor --context /path/to/project --dockerfile /path/to/project/Dockerfile
-    --verbosity info --tarPath image/gitlab-ci-project.tar --no-push --build-arg
-    "first_arg=foo" --build-arg "second_arg=bar" --destination
+    --verbosity info --tarPath image/gitlab-ci-project/11.22.33.tar --no-push
+    --build-arg "first_arg=foo" --build-arg "second_arg=bar" --destination
     index.docker.io/gitlab-ci-project:11.22.33
   cache:
     paths:
@@ -33,7 +33,7 @@ dive-check:
   script:
   - set -eo pipefail
   - >-
-    dive docker-archive://./image/gitlab-ci-project.tar --ci
+    dive docker-archive://image/gitlab-ci-project.tar/11.22.33.tar --ci
     --highestUserWastedPercent "0.1" --lowestEfficiency "0.9" |tee
     /path/to/project/dive.txt
   cache:
@@ -51,9 +51,9 @@ trivy-check:
   script:
   - set -eo pipefail
   - >-
-    trivy image --input ./image/gitlab-ci-project.tar --no-progress --format
-    table --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL --vuln-type os,library
-    |tee /path/to/project/trivy.txt
+    trivy image --input image/gitlab-ci-project/11.22.33.tar --no-progress
+    --format table --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL --vuln-type
+    os,library |tee /path/to/project/trivy.txt
   - trivy --version
   cache:
     paths:
@@ -97,9 +97,9 @@ crane-push-deploy:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - crane validate --tarball ./image/gitlab-ci-project.tar
+  - crane validate --tarball image/gitlab-ci-project/11.22.33.tar
   - >-
-    crane push ./image/gitlab-ci-project.tar
+    crane push image/gitlab-ci-project/11.22.33.tar
     index.docker.io/gitlab-ci-project:11.22.33
   cache:
     paths:
