--- a/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container.yaml
+++ b/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container.yaml
@@ -18,7 +18,7 @@ container-crane-pull:
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"},"1234567890123.dkr.ecr.eu-central-1.amazonaws.com":{"username":"'$ecr-login'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
   - mkdir -p image
-  - crane pull index.docker.io/gcix:0.10.0 ./image/gcix.tar
+  - crane pull index.docker.io/gcix:0.10.0 image/gcix/0.10.0.tar
   cache:
     paths:
     - ./image
@@ -32,8 +32,9 @@ container-dive-check:
   script:
   - set -eo pipefail
   - >-
-    dive docker-archive://./image/gcix.tar --ci --highestUserWastedPercent "0.1"
-    --lowestEfficiency "0.9" |tee /path/to/project/dive.txt
+    dive docker-archive://image/gcix.tar/11.22.33.tar --ci
+    --highestUserWastedPercent "0.1" --lowestEfficiency "0.9" |tee
+    /path/to/project/dive.txt
   cache:
     paths:
     - ./image
@@ -52,8 +53,8 @@ container-trivy-check:
   script:
   - set -eo pipefail
   - >-
-    trivy image --input ./image/gcix.tar --no-progress --format table --severity
-    UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL --vuln-type os,library |tee
+    trivy image --input image/gcix/11.22.33.tar --no-progress --format table
+    --severity UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL --vuln-type os,library |tee
     /path/to/project/trivy.txt
   - trivy --version
   cache:
@@ -105,9 +106,9 @@ container-crane-push-deploy:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"},"1234567890123.dkr.ecr.eu-central-1.amazonaws.com":{"username":"'$ecr-login'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - crane validate --tarball ./image/gcix.tar
+  - crane validate --tarball image/gcix/11.22.33.tar
   - >-
-    crane push ./image/gcix.tar
+    crane push image/gcix/11.22.33.tar
     1234567890123.dkr.ecr.eu-central-1.amazonaws.com/gcix:11.22.33
   cache:
     paths:
