--- a/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container_without_checks.yaml
+++ b/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container_without_checks.yaml
@@ -13,7 +13,7 @@ crane-pull:
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
   - mkdir -p image
-  - crane pull index.docker.io/busybox:latest ./image/busybox.tar
+  - crane pull index.docker.io/busybox:latest image/busybox/latest.tar
   cache:
     paths:
     - ./image
@@ -53,8 +53,8 @@ crane-push-deploy:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - crane validate --tarball ./image/busybox.tar
-  - crane push ./image/busybox.tar quay.io/busybox:11.22.33
+  - crane validate --tarball image/busybox/11.22.33.tar
+  - crane push image/busybox/11.22.33.tar quay.io/busybox:11.22.33
   cache:
     paths:
     - ./image
