--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_simple_pull.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_simple_pull.yaml
@@ -13,4 +13,6 @@ crane-pull:
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
   - mkdir -p /path/to/project
-  - crane pull gcr.io/awesome/image:latest /path/to/project/awesome_image.tar
+  - >-
+    crane pull gcr.io/awesome/image:latest
+    /path/to/project/awesome_image/latest.tar
