--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/simple_crane_push_job.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/simple_crane_push_job.yaml
@@ -12,7 +12,7 @@ push-image-crane-push-deploy:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - crane validate --tarball /path/to/project/gitlab-ci-project.tar
+  - crane validate --tarball /path/to/project/gitlab-ci-project/11.22.33.tar
   - >-
-    crane push /path/to/project/gitlab-ci-project.tar
+    crane push /path/to/project/gitlab-ci-project/11.22.33.tar
     index.docker.io/gitlab-ci-project:11.22.33
