fix(addons): :bug: Fixed bug where kaniko and crane jobs are not creating container image directory.

--- a/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection.yaml
+++ b/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection.yaml
@@ -13,7 +13,7 @@ kaniko-build:
   - >-
     echo '{"credHelpers":{"quay.io":"quay-login"}}' >
     /kaniko/.docker/config.json
-  - mkdir -p image
+  - mkdir -p image/gitlab-ci-project
   - >-
     executor --context /path/to/project --dockerfile /path/to/project/Dockerfile
     --verbosity info --tarPath image/gitlab-ci-project/11.22.33.tar --no-push
