--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_simple_pull.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_simple_pull.yaml
@@ -12,7 +12,7 @@ crane-pull:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - mkdir -p /path/to/project
+  - mkdir -p /path/to/project/awesome_image
   - >-
     crane pull gcr.io/awesome/image:latest
     /path/to/project/awesome_image/latest.tar
