--- a/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection_with_customized_jobs.yaml
+++ b/test/unittest/addons/container/comparison_files/build-collections.test/build_container_collection_with_customized_jobs.yaml
@@ -14,7 +14,7 @@ kaniko-build:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > /kaniko/.docker/config.json
-  - mkdir -p image
+  - mkdir -p image/gitlab-ci-project
   - >-
     executor --context /path/to/project --dockerfile /path/to/project/Dockerfile
     --verbosity info --tarPath image/gitlab-ci-project/11.22.33.tar --no-push
