--- a/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container.yaml
+++ b/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container.yaml
@@ -17,7 +17,7 @@ container-crane-pull:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"},"1234567890123.dkr.ecr.eu-central-1.amazonaws.com":{"username":"'$ecr-login'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - mkdir -p image
+  - mkdir -p image/gcix
   - crane pull index.docker.io/gcix:0.10.0 image/gcix/0.10.0.tar
   cache:
     paths:
