--- a/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_pull_props.yaml
+++ b/test/unittest/addons/container/comparison_files/crane-jobs.test/crane_pull_props.yaml
@@ -12,7 +12,7 @@ changed-name-changed-stage:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > $HOME/.docker/config.json
-  - mkdir -p /path/to/project
+  - mkdir -p /path/to/project/gitlab-ci-project
   - >-
     crane pull quay.io/gitlab-ci-project:feature-1.2.3
     /path/to/project/gitlab-ci-project/feature-1.2.3.tar
