--- a/test/unittest/addons/container/comparison_files/kaniko.test/container_kaniko_job_tar_path.yaml
+++ b/test/unittest/addons/container/comparison_files/kaniko.test/container_kaniko_job_tar_path.yaml
@@ -12,7 +12,7 @@ kaniko-build:
     echo
     '{"auths":{"https://index.docker.io/v1/":{"username":"'$REGISTRY_USERNAME'","password":"'$REGISTRY_PASSWORD'"}}}'
     > /kaniko/.docker/config.json
-  - mkdir -p tar/path/for/image
+  - mkdir -p tar/path/for/image/gitlab-ci-project
   - >-
     executor --context /path/to/project --dockerfile /path/to/project/Dockerfile
     --verbosity info --tarPath tar/path/for/image/gitlab-ci-project/11.22.33.tar
