--- a/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container.yaml
+++ b/test/unittest/addons/container/comparison_files/copy-collections.test/copy_container.yaml
@@ -32,7 +32,7 @@ container-dive-check:
   script:
   - set -eo pipefail
   - >-
-    dive docker-archive://image/gcix.tar/11.22.33.tar --ci
+    dive docker-archive://image/gcix/11.22.33.tar --ci
     --highestUserWastedPercent "0.1" --lowestEfficiency "0.9" |tee
     /path/to/project/dive.txt
   cache:
