chore(deps): :arrow_up: Updated dependencies.

--- a/.npmignore
+++ b/.npmignore
@@ -5,6 +5,8 @@ junit.xml
 /coverage/
 /dist/changelog.md
 /dist/version.txt
+/.prettierignore
+/.prettierrc.json
 /test/
 /tsconfig.dev.json
 /src/
@@ -20,3 +22,5 @@ dist
 tsconfig.tsbuildinfo
 /.eslintrc.json
 !.jsii
+/.gitattributes
+/.projenrc.ts
