--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,6 @@ generated-config.yml
 __pycache__
 /docs/api/
 !/docs/api/index.md
-!/.projenrc.js
 /test-reports/
 junit.xml
 /coverage/
@@ -42,7 +41,6 @@ junit.xml
 /dist/version.txt
 !/.prettierignore
 !/.prettierrc.json
-!/.npmrc
 !/test/
 !/tsconfig.dev.json
 !/src/
@@ -56,3 +54,4 @@ tsconfig.json
 /.env
 !/requirements.txt
 docs/api/api.*.md
+!/.projenrc.ts
