--- a/package.json
+++ b/package.json
@@ -56,42 +56,41 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
-    "@types/js-yaml": "^4.0.5",
-    "@types/lodash": "^4.14.198",
+    "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
-    "@types/tmp": "^0.2.3",
-    "@types/yargs": "^17.0.24",
+    "@types/tmp": "^0.2.6",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
     "aws-sdk-client-mock": "^3.0.0",
-    "aws-sdk-client-mock-jest": "^3.0.0",
+    "aws-sdk-client-mock-jest": "^3.0.1",
+    "constructs": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.6.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.0.0",
-    "jsii-diff": "^1.88.0",
-    "jsii-docgen": "^10.0.0",
-    "jsii-pacmak": "^1.88.0",
+    "jsii-diff": "^1.94.0",
+    "jsii-docgen": "^10.3.17",
+    "jsii-pacmak": "^1.94.0",
     "jsii-rosetta": "~5.0.0",
-    "npm-check-updates": "^16",
-    "prettier": "^3.0.3",
-    "projen": "^0.73.12",
+    "prettier": "^3.2.5",
+    "projen": "^0.79.27",
     "sanitize-filename": "^1.6.3",
     "standard-version": "^9",
     "tmp": "^0.2.1",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@aws-sdk/client-cloudformation": "^3.408.0",
-    "@aws-sdk/client-sts": "^3.408.0",
+    "@aws-sdk/client-cloudformation": "^3.515.0",
+    "@aws-sdk/client-sts": "^3.515.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "yargs": "^17.7.2"
@@ -161,11 +160,13 @@
         }
       ]
     ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
+    "transform": {
+      "^.+\\.[t]sx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json"
+        }
+      ]
     }
   },
   "types": "lib/index.d.ts",
