--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
   icon:
     edit: material/pencil
     view: material/eye
+    repo: material/gitlab
   features:
     - content.code.copy
     - content.action.edit
