docs: Added automatically detect colorscheme from os by default.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,9 +31,14 @@ theme:
   logo: assets/logo.png
   favicon: assets/logo.png
   palette:
+        # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      scheme: default
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      scheme: default
       accent: deep-purple
       toggle:
         icon: material/brightness-7
