docs: Use better tooltips.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ theme:
     - content.action.edit
     - content.action.view
     - content.tabs.link
+    - content.tooltips
     - navigation.instant
     - navigation.tracking
     - navigation.sections
