--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -479,7 +479,7 @@
           "builtin": "release/tag-version"
         },
         {
-          "exec": "git push --follow-tags origin main"
+          "exec": "git push --follow-tags origin && git push -o ci.skip origin main"
         }
       ],
       "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
