--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,7 @@
         }
       }
     ],
-    "no-duplicate-imports": [
+    "import/no-duplicates": [
       "error"
     ],
     "no-shadow": [
