--- a/package.json
+++ b/package.json
@@ -56,41 +56,41 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/tmp": "^0.2.6",
-    "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
-    "aws-sdk-client-mock": "^4.0.0",
-    "aws-sdk-client-mock-jest": "^4.0.0",
+    "@types/yargs": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
+    "aws-sdk-client-mock": "^4.1.0",
+    "aws-sdk-client-mock-jest": "^4.1.0",
+    "commit-and-tag-version": "^12",
     "constructs": "^10.0.0",
-    "eslint": "^8",
+    "eslint": "^9",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.3.0",
-    "jsii-diff": "^1.94.0",
-    "jsii-docgen": "^10.3.17",
-    "jsii-pacmak": "^1.94.0",
+    "jsii-diff": "^1.105.0",
+    "jsii-docgen": "^10.5.0",
+    "jsii-pacmak": "^1.105.0",
     "jsii-rosetta": "~5.3.0",
-    "prettier": "^3.2.5",
-    "projen": "^0.79.27",
+    "prettier": "^3.3.3",
+    "projen": "^0.90.5",
     "sanitize-filename": "^1.6.3",
-    "standard-version": "^9",
-    "tmp": "^0.2.1",
-    "ts-jest": "^29.1.2",
+    "tmp": "^0.2.3",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@aws-sdk/client-cloudformation": "^3.515.0",
-    "@aws-sdk/client-sts": "^3.515.0",
+    "@aws-sdk/client-cloudformation": "^3.699.0",
+    "@aws-sdk/client-sts": "^3.699.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "yargs": "^17.7.2"
@@ -125,12 +125,17 @@
     "url": "https://gitlab.com/gcix/gcix/-/issues/new"
   },
   "jest": {
+    "coverageProvider": "v8",
     "setupFiles": [
       "./test/set-env-vars.ts"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/@(projenrc)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(projenrc)/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/@(projenrc)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(projenrc)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
